# paperatlas

./: .gitignore  HACKATHON_SUBMISSION.md  README.md  REPLIT_QUICK_START.md  REPLIT_UI_PROMPT.md  pyproject.toml
.docs/: PaperAtlas DEV RFC.md  PaperAtlas RFC.md  Phase1-Implementation.md  project-docs.md  project-with-google-adk.md  prompt-to-extract.md
api/: __init__.py  main.py
paperatlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/paperatlas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/paperatlas/api/: main.py
src/paperatlas/api/routes/: graph.py  recommend.py  search.py
src/paperatlas/concepts/extraction/: __init__.py  config.py  generate.py  heuristic_extractor.py  ingest.py  llm_extractor.py  models.py  pdf_parser.py  pipeline.py  sources.py  storage.py
src/paperatlas/concepts/summarization/: concept_summarizer.py
src/paperatlas/concepts/tests/: __init__.py  test_extraction.py  test_summarization.py
src/paperatlas/concepts/validation/: deduplication.py
src/paperatlas/config/: settings.yaml
src/paperatlas/embeddings/: encoder.py
src/paperatlas/graph/: neo4j_client.py  schema.py
src/paperatlas/graph/builders/: concept_graph.py  paper_graph.py
src/paperatlas/ml/models/: concept_ranker.py
src/paperatlas/recommender/: concept_recommender.py
src/paperatlas/scripts/: __init__.py  run_phase2_pipeline.py
